# SecondSight

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ISSUES.md  README.md  TODO.md  config.example.toml  install.sh  pyproject.toml  survey.md  uninstall.sh
.claude/: settings.json
.github/workflows/: ci.yml  install-smoke.yml  release.yml
bugfix/2026-05-15_cli-analysis-hook-recursion/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-15_init-template-schema-drift/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-15_mode-aware-empty-analysis-payload/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-20_user-prompt-injection-timeout/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-22_ci-frontend-dist-missing/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-22_config-log-level-not-applied/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-22_install-smoke-home-mismatch/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
bugfix/2026-05-23_setup-uv-immutable-tag/: bug-report.yaml  fix-summary.yaml  root-cause.yaml
changes/2026-04-24_phase0-feasibility/: 1-kickoff.md  2-plan.md  acceptance.yaml  event-schema-design.md  index.yaml  overview.md  problem-autopsy.md  storage-design.md
changes/2026-04-27_phase0-extend/: 1-kickoff.md  problem-autopsy.md
changes/2026-05-04_gur-116-lazy-cache-consolidation/: fast-track.yaml
changes/2026-05-04_phase1-adapters/: 1-kickoff.md  2-plan.md  acceptance.md  index.yaml  problem-autopsy.md  security-privacy-review.md  ship-manifest.yaml
changes/2026-05-04_phase1-api-server/: index.yaml  overview.md  security-privacy-review.md
changes/2026-05-04_phase1-storage-layer/: index.yaml  overview.md
changes/2026-05-04_phase4-1-ci-pipeline/: fast-track.yaml
changes/2026-05-04_phase4-2-install-smoke/: fast-track.yaml
changes/2026-05-05_gur-100_phase2-analysis-core/: 1-kickoff.md  2-plan.md  2-pre-thinking.md  acceptance.yaml  index.yaml  overview.md  problem-autopsy.md  security-privacy-review.md  ship-manifest.yaml
changes/2026-05-05_gur-98-review2-must-should-fix/: fast-track.yaml
changes/2026-05-05_gur-98_hook-install-cli/: index.yaml
changes/2026-05-05_gur-99_phase1-e2e-integration-test/: 1-kickoff.md  2-plan.md  2-pre-thinking.md  acceptance.yaml  index.yaml  overview.md  problem-autopsy.md  ship-manifest.yaml
docs/: PRD.md  api.md  architecture.md  backlog.md  plan.md  plan_v2.md  system_design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/mockups/: DESIGN.md  (+1 more)
tests/: conftest.py  test_conftest_bridge.py  test_factories.py  test_logging_utils.py  test_task4_deletion_invariants.py
(+704 files in other folders)
