[project]
name = "secondsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secondsight"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pyyaml>=6.0"]
