[project]
name = "secondsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "litellm>=1.83.0",
    "loguru>=0.7.3",
    "pendulum>=3.2.0",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.87.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secondsight"]

[tool.ruff]
extend-exclude = ["changes"]
line-length = 100
target-version = "py314"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pyyaml>=6.0"]
